--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       		<h2>Your details</h2>
       		<ul>
       			<li>
-      				<label for="name">Namess</label>
+      				<label for="name">Names</label>
       				<input id="name" name="name" type="text" required>
       			</li>
       			<li>
